Prevent title wrap for story items in IE8

--- a/webtree/themes/main/css/collapse_files/responsive.css
+++ b/webtree/themes/main/css/collapse_files/responsive.css
@@ -550,6 +550,8 @@ table{
 #exhibit-item-title-only{
 	/* Andy removed this because long titles were overflowing: but why was this put in the first place? */
 	/* white-space:	nowrap; */
+	width:100%;
+	min-width:100%;
 }
 
 
